--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.2/font/bootstrap-icons.min.css"
+      integrity="sha512-D1liES3uvDpPrgk7vXR/hR/sukGn7EtDWEyvpdLsyalQYq6v6YUsTUJmku7B4rcuQ21rf0UTksw2i/2Pdjbd3g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="container">
       <div class="header">
         <div class="logo-box">
-          <img src="./images/wppusher-logo copy.svg" alt="" />
+          <img src="./images/wppusher-logo copy.svg" alt="company logo" />
         </div>
         <div class="nav">
           <ul>
@@ -29,48 +43,116 @@
           <button>Account</button>
         </div>
       </div>
-      <div class="main">
+
+      <div class="main-container">
         <div class="main-box">
-          <div class="left-main-box">
-            <div class="title">
-              <h2>Checkout</h2>
+          <div class="title">
+            <h2>Checkout</h2>
+          </div>
+
+          <div class="form-box">
+            <div class="info-header">
+              <p><span>1</span> Your Basic Information</p>
             </div>
             <form action="">
-              <div class="info-box">
-                <div class="info-header">
-                  <p><span>1</span> Your Basic Information</p>
-                </div>
+              <div class="name-box">
                 <div class="input-box">
                   <label for="fName">First Name</label>
-                  <input type="text" placeholder="John" />
+                  <input id="fName" type="text" placeholder="John" />
                 </div>
                 <div class="input-box">
                   <label for="lName">Last Name</label>
-                  <input type="text" placeholder="Doe" />
-                </div>
-                <div class="input-box">
-                  <label for="email">E-mail</label>
-                  <input type="email" placeholder="johndoe@example.com" />
+                  <input id="lName" type="text" placeholder="Doe" />
                 </div>
               </div>
-              <div class="card-info-box">
-                <div class="info-header">
-                  <p><span>2</span> Your Payment Information</p>
-                </div>
-                <div class="input-box">
-                  <label for="creditCard">Credit Card</label>
-                  <input type="text" placeholder="Card Number" />
-                </div>
-              </div>
-              <btn-box>
-                <button>Buy WP Pusher</button>
-              </btn-box>
-              <div class="help-box">
-                <p>Need any help? Don’t hesitate to contact support!</p>
+              <div class="input-box">
+                <label for="email">E-mail</label>
+                <input
+                  id="email"
+                  type="email"
+                  placeholder="johndoe@example.com"
+                />
               </div>
             </form>
           </div>
-          <div class="right-main-box"></div>
+
+          <div class="divider-top"></div>
+
+          <div class="divider"></div>
+
+          <div class="form-box">
+            <div class="info-header">
+              <p><span>2</span> Your Payment Information</p>
+            </div>
+            <form action="">
+              <div class="input-box">
+                <label for="creditCard">Credit Card</label>
+                <input id="creditCard" type="text" placeholder="Card Number" />
+              </div>
+
+              <div class="btn-box">
+                <button>Buy WP Pusher</button>
+              </div>
+            </form>
+          </div>
+          <div class="footer">
+            <div class="help-box">
+              <p>
+                <i class="bi bi-question-circle"></i>
+                <span>Need any help?</span> Don’t hesitate to
+                <a href="#">contact support!</a>
+              </p>
+            </div>
+            <div class="btn-power">
+              <p>Powered by</p>
+              <img src="./images/Stripe.svg" alt="" />
+            </div>
+          </div>
+        </div>
+
+        <div class="sidebar">
+          <div class="sidebar-top">
+            <div class="sidebar-title">
+              <p>Freelancer</p>
+            </div>
+            <div class="amount">
+              <div class="dollar">
+                <p>$</p>
+              </div>
+              <p>99 <span>/ year</span></p>
+            </div>
+            <div class="amount-desc">
+              <p>Automatically renews after 1 year</p>
+            </div>
+          </div>
+          <div class="offers">
+            <ul>
+              <li><i class="bi bi-check-circle"></i>Use on 5 client sites</li>
+              <li><i class="bi bi-check-circle"></i>Private repositories</li>
+              <li><i class="bi bi-check-circle"></i>Email support</li>
+            </ul>
+          </div>
+          <div class="link">
+            <p>Need 20 client sites?</p>
+            <a href="#">Switch to the Agency plan.</a>
+          </div>
+
+          <div class="feedback">
+            <div class="feedback-text">
+              <p>
+                FTP is horrible to deal with. WP Pusher solves that issue, and
+                the customer support is awesome!
+              </p>
+            </div>
+            <div class="feedback-profile">
+              <div class="profile-img">
+                <img src="./images/bitmap.svg" alt="" />
+              </div>
+              <div class="profile-name">
+                <p>Kirk Beard</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
