responsiveness was adjusted

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </li>
           </ul>
           <button>Account</button>
+          <div class="menu-icon"><i class="bi bi-list"></i></div>
         </div>
       </div>
 
@@ -77,33 +78,55 @@
             </form>
           </div>
 
-          <div class="divider-top"></div>
+          <div class="divider top"></div>
 
           <div class="divider"></div>
+
+          <div class="divider bottom"></div>
 
           <div class="form-box">
             <div class="info-header">
               <p><span>2</span> Your Payment Information</p>
             </div>
-            <form action="">
-              <div class="input-box creditCard">
-                <label for="creditCard">Credit Card</label>
-                <input id="creditCard" type="text" />
-                <div class="placeholder">
-                  <div class="cardNum">
-                    <input type="text" placeholder="Card Number" />
-                  </div>
-                  <div class="ccv-wrap">
-                    <input type="text" placeholder="MM / YY" />
-                    <input type="text" placeholder="CVC" />
+            <div class="web-input">
+              <form action="">
+                <div class="input-box creditCard">
+                  <label for="creditCard">Credit Card</label>
+                  <input id="creditCard" type="text" />
+                  <div class="placeholder">
+                    <div class="cardNum">
+                      <input type="text" placeholder="Card Number" />
+                    </div>
+                    <div class="ccv-wrap">
+                      <input type="text" placeholder="MM / YY" />
+                      <input type="text" placeholder="CVC" />
+                    </div>
                   </div>
                 </div>
-              </div>
 
-              <div class="btn-box">
-                <button>Buy WP Pusher</button>
-              </div>
-            </form>
+                <div class="btn-box">
+                  <button>Buy WP Pusher</button>
+                </div>
+              </form>
+            </div>
+
+            <div class="mobile-input">
+              <form action="">
+                <div class="input-box">
+                  <label for="creditCard">Credit Card</label>
+                  <input type="text" placeholder="Card Number" />
+                </div>
+
+                <div class="input-box">
+                  <input type="text" placeholder="MM / YY" />
+                  <input type="text" placeholder="CVC" />
+                </div>
+
+                <div class="btn-box">
+                  <button>Buy WP Pusher</button>
+                </div>
+              </form>
+            </div>
           </div>
           <div class="footer">
             <div class="help-box">
